# velodyne_obstacle_detect

./: README.md
cpp_tutorial/: CMakeLists.txt  package.xml
cpp_tutorial/src/: c_struct_tutorial.cpp  c_typedef_tutorial.cpp  cpp_class_tutorial.cpp  cpp_func_tutorial_0.cpp  cpp_func_tutorial_1.cpp  cpp_namespace_tutorial.cpp
lidar_obstacle_detector/: CMakeLists.txt
lidar_obstacle_detector/cfg/: obstacle_detector.cfg
lidar_obstacle_detector/include/lidar_obstacle_detector/: obstacle_detector.hpp
lidar_obstacle_detector/launch/: mai_city.launch
lidar_obstacle_detector/src/: obstacle_detect_stop.cpp  obstacle_detector_node.cpp
plane_fit_ground_filter/: package.xml  plane_ground_filter.launch
plane_fit_ground_filter/include/: plane_ground_filter_core.h
plane_fit_ground_filter/src/: plane_ground_filter_core.cpp
velo_filter/: CMakeLists.txt
velo_filter/include/: velo_filter.h
velo_filter/launch/: velo_filter.launch
velo_filter/src/: velo_filter_core.cpp
